When Context manager does not exist, no context manager message is replied in order to avoid timeout (default 60 sec) of GET_ALL_SESSIONS sync phase.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1195848 13f79535-47bb-0310-9956-ffa450edef68